--- a/settings/config
+++ b/settings/config
@@ -8,7 +8,9 @@ module.exports = {
     },
 
     hashsPath: "/data/prog/js/Pi/server/storage/hashs/",
-    piPath: "/data/prog/js/Pi/server/storage/pi",
+    piPath: "/data/prog/js/Pi/server/storage/pi/",
+
+    piPartSize: 250000000,
 
     minify: false,
 
@@ -30,7 +32,7 @@ module.exports = {
   production:
   {
     hashsPath: "/data/Pi/hashs/",
-    piPath: "/data/Pi/Pi/"
+    piPath: "/data/Pi/pi/"
   },
 
   preproduction:
