--- a/settings/config
+++ b/settings/config
@@ -11,6 +11,7 @@ module.exports = {
     piPath: "/data/prog/js/Pi/server/storage/pi/",
 
     piPartSize: 250000000,
+    piFileSlice: 250000,
 
     minify: false,
 
@@ -32,6 +33,8 @@ module.exports = {
   production:
   {
     hashsPath: "/data/Pi/hashs/",
+    piPartSize: 12500000000,
+    piFileSlice: 12500000,
     piPath: "/data/Pi/pi/"
   },
 
