--- a/settings/config
+++ b/settings/config
@@ -10,6 +10,8 @@ module.exports = {
     hashsPath: "/data/prog/js/Pi/server/storage/hashs/",
     piPath: "/data/prog/js/Pi/server/storage/pi/",
 
+    cacheFile: "/data/prog/js/Pi/Server/storage/pi/cache",
+
     piPartSize: 250000000,
     piFileSlice: 250000,
 
@@ -35,7 +37,8 @@ module.exports = {
     hashsPath: "/data/Pi/hashs/",
     piPartSize: 12500000000,
     piFileSlice: 12500000,
-    piPath: "/data/Pi/pi/"
+    piPath: "/data/Pi/pi/",
+    cacheFile: "/data/Pi/pi/cache"
   },
 
   preproduction:
