--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "app",
   "version": "0.0.3",
   "dependencies": {
-    "nodulator": "0.0.8",
-    "nodulator-socket": "0.0.2",
-    "nodulator-assets": "0.0.7",
-    "nodulator-angular": "0.0.7"
+    "nodulator": "0.0.9",
+    "nodulator-socket": "0.0.3",
+    "nodulator-assets": "0.0.8",
+    "nodulator-angular": "0.0.8",
+    "nodulator-account": "0.0.2"
   }
 }
